# ArcOS

./: CMakeLists.txt  README.md
computation-module/: computation-module.ino
computation-module/libraries/memory-bus/: memory-bus.h
computation-module/modules/: auth_system.h  file_system.h  load_file.h  user-credentials.h
computation-module/modules/command-excecuter/: basic-functions.h  excecute.h
libraries/memory-bus/: memory-bus.cpp  memory-bus.h
memory-module/libraries/memory-bus/: memory-bus.h
